Fix menu on small device (scrollable).

--- a/app/assets/stylesheets/layout/nav.css.sass
+++ b/app/assets/stylesheets/layout/nav.css.sass
@@ -1,30 +1,32 @@
 $menu-height: 50px
 $menu-background: $gray-dark
 $menu-color: $gray-light
+
+@mixin show-menu
+  height: 100%
+  overflow: auto
+  ul
+    display: block
+
 #nav
+  background: blue
   width: 100%
   z-index: 9999
   position: fixed
   top: 0
-  bottom: 0
   right: 0
-  &.nav-collapse
-    ul
-      display: none
+  &.nav-show
+    @include show-menu
   &.nojs
-    &:hover,
-      ul
-        display: block
-    ul
-      display: block
-      display: none
+    &:hover
+      @include show-menu
   ul
+    display: none
     padding: 0
     width: 100%
-    height: 100%
-    overflow: auto
     position: absolute
     right: 0
+    max-height: 100%
     //top: -$menu-height
     list-style-type: none
   li.active a
@@ -53,8 +55,7 @@ $menu-color: $gray-light
     display: block
 @media (min-width: 300px)
   #nav
-    ul
-      width: 300px
+    width: 300px
 
 
 
